# mvcc-key-value-database

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.rst  go.mod
cmd/server/: BUILD.bazel  db.go  handler.go  main.go
internal/db/: BUILD.bazel  db.go  errors.go  lock.go  record.go  store.go  store_test.go  tx.go
