module(
    name = "seh-db",
    version = "0.0.0",
)

bazel_dep(name = "gazelle", version = "0.31.0")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_spf13_pflag",
)

bazel_dep(name = "platforms", version = "0.0.6")
bazel_dep(name = "rules_go", version = "0.39.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.20.4")
