load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "lib",
    srcs = [
        "db.go",
        "handler.go",
        "main.go",
    ],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = ["@com_github_spf13_pflag//:pflag"],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "server_lib",
    srcs = [
        "db.go",
        "handler.go",
        "main.go",
    ],
    importpath = "sehlabs.com/db/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/db",
        "@com_github_spf13_pflag//:pflag",
    ],
)
