load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "db",
    srcs = [
        "db.go",
        "errors.go",
        "lock.go",
        "record.go",
        "store.go",
        "tx.go",
    ],
    importpath = "sehlabs.com/db/internal/db",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "db_test",
    srcs = ["store_test.go"],
    embed = [":db"],
)
